<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/color_upgrade_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_vertical_16"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        android:showDividers="middle">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/image_background_01" />

        <LinearLayout
            android:id="@+id/view_purchased"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_round_8"
            android:backgroundTint="@color/primary_dark"
            android:divider="@drawable/divider_vertical_16"
            android:orientation="vertical"
            android:paddingVertical="16dp"
            android:showDividers="middle"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_purchased"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:gravity="center"
                android:text="@string/you_current_xxx"
                android:textAppearance="@style/AppBodyText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_subscriptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_vertical_16"
            android:orientation="vertical"
            android:showDividers="middle"
            android:visibility="visible"
            tools:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_round_8"
                android:backgroundTint="@color/primary_dark"
                android:divider="@drawable/divider_vertical_16"
                android:orientation="vertical"
                android:paddingVertical="16dp"
                android:showDividers="middle">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:gravity="center"
                    android:text="@string/there_is_no_ads_anymore_awesome"
                    android:textAppearance="@style/AppBodyText" />

                <LinearLayout
                    android:id="@+id/view_package"
                    android:layout_width="match_parent"
                    android:layout_height="112dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/primary"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/view_month"
                        layout="@layout/item_package"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <include
                        android:id="@+id/view_year"
                        layout="@layout/item_package"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/btn_upgrade"
                    style="@style/AppButton"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/upgrade_vip" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recurring_billing_cancel_anytime"
                android:textAppearance="@style/AppBodyText"
                android:textColor="#2A2A2C"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider_horizontal_16"
                android:orientation="horizontal"
                android:showDividers="middle">

                <TextView
                    android:id="@+id/btn_policy"
                    style="@style/AppButton"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/privacy_policy"
                    android:textColor="#212121"
                    android:textSize="10dp"
                    tools:ignore="SmallSp,SpUsage" />

                <TextView
                    android:id="@+id/btn_term"
                    style="@style/AppButton"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/terms_of_use"
                    android:textColor="#212121"
                    android:textSize="10dp"
                    tools:ignore="SmallSp,SpUsage" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>