<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@id/view_info"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/ic_logo_connect" />

    <LinearLayout
        android:id="@+id/view_info"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:divider="@drawable/divider_horizontal_16"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintBottom_toTopOf="@id/view_action">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_round_8">

            <ImageView
                android:id="@+id/img_1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_upload"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:letterSpacing="0.14"
                android:text="@string/upload"
                android:textAllCaps="true"
                android:textAppearance="@style/AppBodyText"
                android:textColor="@color/white_50"
                android:textSize="9dp"
                app:layout_constraintBottom_toTopOf="@id/tv_upload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tv_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:letterSpacing="0.14"
                android:text="0 MB"
                android:textAllCaps="true"
                android:textAppearance="@style/AppTitleText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_1"
                app:layout_constraintTop_toBottomOf="@id/label_upload" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_round_8">

            <ImageView
                android:id="@+id/img_2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_download"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_download"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:letterSpacing="0.14"
                android:text="@string/upload"
                android:textAllCaps="true"
                android:textAppearance="@style/AppBodyText"
                android:textColor="@color/white_50"
                android:textSize="9dp"
                app:layout_constraintBottom_toTopOf="@id/tv_download"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tv_download"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:letterSpacing="0.14"
                android:text="0 MB"
                android:textAllCaps="true"
                android:textAppearance="@style/AppTitleText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_2"
                app:layout_constraintTop_toBottomOf="@id/label_download" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_round_top_8"
        android:divider="@drawable/divider_vertical_16"
        android:orientation="vertical"
        android:showDividers="middle|beginning|end"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/btn_location"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/background_round_8"
            android:backgroundTint="@color/primary_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_flag"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/select_a_location"
                android:textAppearance="@style/AppContentText"
                tools:ignore="UseCompatTextViewDrawableXml" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_connect"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="8dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/accent_2">

                <View
                    android:id="@+id/view_progress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/accent"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:letterSpacing="0.2"
                    android:text="@string/connect_vpn_now"
                    android:textAllCaps="true"
                    android:textAppearance="@style/AppBodyText"
                    android:textSize="13dp"
                    tools:ignore="SpUsage" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>


        <FrameLayout
            android:id="@+id/ad_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>